--- a/libs/client-report/ui/src/lib/client-list-table/client-list-table.component.html
+++ b/libs/client-report/ui/src/lib/client-list-table/client-list-table.component.html
@@ -22,7 +22,7 @@
   </ng-template>
   <ng-template pTemplate="body" let-tableData let-columns="columns">
     <tr>
-      <td class="table-column" *ngFor="let col of columns">
+      <td class="table-column" *ngFor="let col of columns; let i = index">
         <ng-content
           *ngIf="col.field === 'action'; then actionBlock; else dataBlock"
         ></ng-content>
@@ -32,6 +32,7 @@
             label="Edit"
             icon="pi pi-pencil"
             iconPos="left"
+            (click)="edit(tableData)"
           ></p-button>
         </ng-template>
       </td>
